# Amxx-Hide-Bots

./: .gitignore  CMakeLists.txt  Dockerfile  README.md
.github/workflows/: build.yml
amxx/scripting/: HideBots.sma
amxx/scripting/include/: hide_bots.inc
cmake/: FindHLSDK.cmake  FindSteamworks.cmake  Findmetamod.cmake
dep/steamworks/: README.md
src/: CMakeLists.txt  HideBots.version  a2s_query.cpp  a2s_query.h  module.cpp  sendto_hook.cpp  sendto_hook.h  steam_bots.cpp  steam_bots.h  synthetic_players.cpp  synthetic_players.h
src/sdk/: moduleconfig.h
